syntax = "proto3";

package Prime;

option go_package ="./pb";

message PrimeRequest{
    int64 Number=1;
}
message PrimeResponse{
    int64 primeFactor=1;
}

service PrimeService{
    rpc Prime(PrimeRequest) returns (stream PrimeResponse){};
}